--- a/index.html
+++ b/index.html
@@ -1,181 +1,329 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Uber Pro GPS Edition</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+<title>Uber Pro GPS</title>
 
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Inter:wght@300;400;700;900&display=swap');
+<script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
 
-        :root {
-            --neon-blue: #00d2ff;
-            --deep-blue: #0072ff;
-        }
+<style>
+  /* Diseño base (mantengo tu estilo y look) */
+  :root { --neon-blue:#00d2ff; --deep-blue:#0072ff; }
 
-        body {
-            background-color: #050505;
-            color: #fff;
-            font-family: 'Inter', sans-serif;
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-        }
+  html,body{
+    height:100%;
+    margin:0;
+    background:#050505;
+    color:#fff;
+    font-family:Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+    -webkit-font-smoothing:antialiased;
+    -webkit-text-size-adjust:100%;
+  }
 
-        .brand-title {
-            font-family: 'Orbitron', sans-serif;
-            font-weight: 900;
-            font-size: 2.5rem;
-            letter-spacing: 4px;
-            color: #000;
-            -webkit-text-stroke: 1.5px var(--neon-blue);
-            text-shadow: 0 0 10px rgba(0,210,255,.7),
-                         0 0 20px rgba(0,210,255,.3);
-        }
+  .page {
+    min-height:100vh;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    padding:12px;
+    box-sizing:border-box;
+  }
 
-        .neon-container {
-            position: relative;
-            max-width: 400px;
-            width: 100%;
-            height: 90vh;
-            background: #0a0a0a;
-            border-radius: 40px;
-            padding: 3px;
-            overflow: hidden;
-            box-shadow: 0 0 40px rgba(0,114,255,.3);
-        }
+  .neon-container{
+    width:100%;
+    max-width:420px;
+    /* change height to auto so content can scroll on small screens */
+    height:auto;
+    background:#0a0a0a;
+    border-radius:20px;
+    padding:8px;
+    box-shadow:0 10px 30px rgba(0,114,255,0.18);
+  }
 
-        .neon-container::before {
-            content: "";
-            position: absolute;
-            inset: -50%;
-            background: conic-gradient(
-                transparent,
-                var(--neon-blue),
-                var(--deep-blue),
-                transparent 40%
-            );
-            animation: rotate 6s linear infinite;
-        }
+  .glass-panel{
+    background:rgba(10,10,10,0.96);
+    border-radius:16px;
+    padding:16px;
+    display:flex;
+    flex-direction:column;
+    gap:12px;
+    max-height:85vh;            /* limit overall panel height on small screens */
+    overflow:auto;              /* allow scrolling inside the panel */
+    box-sizing:border-box;
+  }
 
-        @keyframes rotate {
-            to { transform: rotate(360deg); }
-        }
+  .brand-title{
+    font-family: 'Orbitron', sans-serif;
+    font-size:20px;
+    letter-spacing:3px;
+    color:#000;
+    -webkit-text-stroke:1.4px var(--neon-blue);
+    text-align:center;
+    margin:0;
+  }
 
-        .glass-panel {
-            position: relative;
-            z-index: 1;
-            background: rgba(10,10,10,.95);
-            border-radius: 37px;
-            width: 100%;
-            height: 100%;
-            padding: 24px;
-            display: flex;
-            flex-direction: column;
-        }
+  .ios-card{
+    background:rgba(255,255,255,0.03);
+    border-radius:12px;
+    padding:10px;
+    border:1px solid rgba(255,255,255,0.06);
+  }
 
-        .ios-card {
-            background: rgba(255,255,255,.03);
-            backdrop-filter: blur(10px);
-            border-radius: 24px;
-            border: 1px solid rgba(255,255,255,.08);
-            padding: 20px;
-        }
+  input[type=file]{ width:100%; color:#fff; }
 
-        #dropzone {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            margin-bottom: 20px;
-        }
+  /* IMPORTANT: limit preview height so buttons remain visible */
+  #preview{
+    display:block;
+    width:100%;
+    max-height:40vh;       /* <-- key: the image will never exceed 40% of viewport height */
+    object-fit:contain;    /* keep aspect ratio and avoid overflow */
+    border-radius:12px;
+    margin-top:8px;
+  }
 
-        .btn-analyze {
-            background: linear-gradient(135deg,#fff,#e0e0e0);
-            color: #000;
-            font-weight: 900;
-            border-radius: 18px;
-            width: 100%;
-            padding: 20px;
-            opacity: .2;
-            pointer-events: none;
-            transition: .3s;
-        }
+  .controls{
+    display:flex;
+    flex-direction:column;
+    gap:10px;
+  }
 
-        .btn-analyze.active {
-            opacity: 1;
-            pointer-events: auto;
-        }
+  .btn{
+    padding:14px;
+    border-radius:12px;
+    border:none;
+    font-weight:800;
+    cursor:pointer;
+    width:100%;
+  }
+  .btn.analyze{ background: linear-gradient(135deg,#fff,#e6e6e6); color:#000; }
+  .btn.navigate{ background: linear-gradient(135deg,var(--neon-blue),var(--deep-blue)); color:#000; }
 
-        .preview-img {
-            max-width: 100%;
-            max-height: 100%;
-            border-radius: 20px;
-            display: none;
-        }
-    </style>
+  #log{
+    font-size:13px;
+    color:#9ed7ff;
+    white-space:pre-line;
+    min-height:44px;
+    margin-top:6px;
+  }
+
+  /* On very small screens, make the panel full-height minus safe area and show scroll */
+  @media (max-height:700px){
+    .glass-panel{ max-height:92vh; }
+    #preview{ max-height:36vh; }
+  }
+
+  /* Make buttons sticky at the bottom of the panel (optional subtle help) */
+  .sticky-footer{
+    position:sticky;
+    bottom:0;
+    background:linear-gradient(180deg, rgba(10,10,10,0), rgba(10,10,10,0.8));
+    padding-top:8px;
+    padding-bottom:6px;
+    margin-top:auto;
+  }
+</style>
 </head>
-
 <body>
+  <div class="page">
+    <div class="neon-container">
+      <div class="glass-panel">
 
-<div class="neon-container">
-    <div class="glass-panel">
+        <h1 class="brand-title">UBER PRO</h1>
 
-        <div class="text-center mb-6">
-            <h1 class="brand-title">UBER PRO</h1>
-            <p class="text-[10px] opacity-60 tracking-widest">Deep Scan GPS</p>
+        <div class="ios-card">
+          <label for="fileInput" style="display:block; font-size:12px; color:#bcd;">Cargar captura</label>
+          <input id="fileInput" type="file" accept="image/*" />
+          <img id="preview" alt="preview imagen">
         </div>
 
-        <div id="ui-main" class="flex flex-col flex-1">
-            <div id="dropzone" class="ios-card">
-                <input id="file-input" type="file" accept="image/*" hidden>
-                <p id="upload-text" class="text-xs opacity-40 uppercase tracking-widest">
-                    Cargar Captura
-                </p>
-                <img id="image-preview" class="preview-img">
-            </div>
-
-            <button id="analyze-trigger" class="btn-analyze">
-                Analizar Trayecto ✨
-            </button>
+        <div class="controls sticky-footer">
+          <button id="btnAnalyze" class="btn analyze">Analizar trayecto ✨</button>
+          <button id="btnNavigate" class="btn navigate">Navegar PRO</button>
         </div>
 
+        <div id="log">Estado: esperando imagen...</div>
+
+      </div>
     </div>
-</div>
+  </div>
 
 <script>
-const fileInput = document.getElementById("file-input");
-const dropzone = document.getElementById("dropzone");
-const imgPreview = document.getElementById("image-preview");
-const uploadText = document.getElementById("upload-text");
-const analyzeBtn = document.getElementById("analyze-trigger");
+/* --- DOM --- */
+const fileInput = document.getElementById('fileInput');
+const preview = document.getElementById('preview');
+const btnAnalyze = document.getElementById('btnAnalyze');
+const btnNavigate = document.getElementById('btnNavigate');
+const logBox = document.getElementById('log');
 
-// ✅ FIX REAL — click correcto
-dropzone.addEventListener("click", () => {
-    fileInput.click();
+let currentCoords = null;
+
+/* show preview and ensure it fits */
+fileInput.addEventListener('change', (e)=>{
+  const f = e.target.files[0];
+  if(!f) return;
+  preview.src = URL.createObjectURL(f);
+  preview.style.display = 'block';
+  log('Imagen cargada, lista para analizar.');
 });
 
-fileInput.addEventListener("change", e => {
-    const file = e.target.files[0];
-    if (!file) return;
+/* logger */
+function log(msg){
+  console.log('[UberPro]', msg);
+  // prepend new lines for clarity
+  logBox.innerText = msg;
+}
 
-    const reader = new FileReader();
-    reader.onload = ev => {
-        imgPreview.src = ev.target.result;
-        imgPreview.style.display = "block";
-        uploadText.style.display = "none";
-        analyzeBtn.classList.add("active");
-    };
-    reader.readAsDataURL(file);
-});
+/* helper to extract coords from text */
+function extractCoordsFromText(text){
+  if(!text) return null;
+  const re = /(-?\d{1,2}\.\d+)\s*,\s*(-?\d{1,3}\.\d+)/g;
+  let m;
+  while((m = re.exec(text)) !== null){
+    const la = Number(m[1]), lo = Number(m[2]);
+    if(!Number.isNaN(la) && !Number.isNaN(lo) && la>=-90 && la<=90 && lo>=-180 && lo<=180){
+      return { lat: la.toFixed(6), lon: lo.toFixed(6) };
+    }
+  }
+  return null;
+}
+
+/* OCR worker + timeout + termination (robust) */
+async function analyzeImage(){
+  const f = fileInput.files[0];
+  if(!f){ log('Selecciona una imagen primero'); return; }
+
+  log('Iniciando OCR (optimizado)...');
+  btnAnalyze.disabled = true;
+  btnNavigate.disabled = true;
+  currentCoords = null;
+
+  let worker = null;
+  let usedImageSrc = null;
+
+  try{
+    // small resize helper (use object URL if needed) to speed OCR on huge photos
+    const resizeIfLarge = (file, maxWidth=1200) => new Promise((resolve, reject)=>{
+      const img = new Image();
+      const reader = new FileReader();
+      reader.onload = e => { img.src = e.target.result; };
+      reader.onerror = reject;
+      img.onerror = reject;
+      img.onload = () => {
+        if(img.width <= maxWidth){ resolve(img.src); return; }
+        const scale = maxWidth / img.width;
+        const canvas = document.createElement('canvas');
+        canvas.width = Math.round(img.width * scale);
+        canvas.height = Math.round(img.height * scale);
+        const ctx = canvas.getContext('2d');
+        ctx.drawImage(img,0,0,canvas.width,canvas.height);
+        canvas.toBlob(blob => {
+          if(!blob) resolve(img.src);
+          else resolve(URL.createObjectURL(blob));
+        }, 'image/jpeg', 0.85);
+      };
+      reader.readAsDataURL(file);
+    });
+
+    usedImageSrc = await resizeIfLarge(f, 1200);
+    log('Imagen preparada para OCR.');
+
+    if(typeof Tesseract === 'undefined' || !Tesseract.createWorker){
+      throw new Error('Motor OCR no disponible en este navegador.');
+    }
+
+    worker = Tesseract.createWorker({
+      logger: m => {
+        // show high-level statuses (optional)
+        if(m && m.status) log('OCR: ' + m.status);
+      }
+    });
+
+    await worker.load();
+    await worker.loadLanguage('eng');
+    await worker.initialize('eng');
+    await worker.setParameters({ tessedit_char_whitelist: '0123456789.,- ' });
+
+    // recognize with timeout
+    const recognizePromise = worker.recognize(usedImageSrc);
+    const res = await Promise.race([
+      recognizePromise,
+      new Promise((_,reject)=>setTimeout(()=>reject(new Error('OCR timeout')),25000))
+    ]);
+
+    const text = (res && res.data && res.data.text) ? res.data.text : (res && res.text) ? res.text : '';
+    console.log('[OCR TEXT]', text);
+
+    const coords = extractCoordsFromText(text);
+    if(!coords){
+      log('OCR finalizado: no se encontraron coordenadas visibles.');
+      return;
+    }
+
+    currentCoords = `${coords.lat},${coords.lon}`;
+    try{ await navigator.clipboard.writeText(currentCoords); log('Coordenadas detectadas y copiadas: ' + currentCoords); }
+    catch(e){ log('Coordenadas detectadas: ' + currentCoords + ' (no se pudo copiar automáticamente)'); }
+
+  }catch(err){
+    console.error('analyze error', err);
+    if(err && err.message && err.message.includes('OCR timeout')){
+      log('OCR tardó demasiado. Intenta una imagen más pequeña o recorta la zona de coordenadas.');
+    } else {
+      log('Error al procesar la imagen. Revisa la consola remota.');
+    }
+  }finally{
+    try{ if(worker) await worker.terminate(); }catch(e){}
+    try{ if(usedImageSrc && usedImageSrc.startsWith('blob:')) URL.revokeObjectURL(usedImageSrc); }catch(e){}
+    btnAnalyze.disabled = false;
+    btnNavigate.disabled = false;
+  }
+}
+
+/* Navigate PRO: try Sygic schemes, fallback to Google Maps */
+function navigatePro(){
+  if(!currentCoords){ log('Analiza la imagen primero.'); return; }
+  log('Intentando abrir Sygic (o fallback Google)...');
+
+  const sygicSchemes = [
+    `sygic://coordinate|${currentCoords}`,
+    `com.sygic.aura://coordinate|${currentCoords}`
+  ];
+  const googleUrl = `https://www.google.com/maps/search/?api=1&query=${currentCoords}`;
+
+  // Try anchor click method for web
+  try{
+    const a = document.createElement('a');
+    a.href = sygicSchemes[0];
+    a.style.display = 'none';
+    document.body.appendChild(a);
+    a.click();
+    document.body.removeChild(a);
+    setTimeout(()=>{ log('Si Sygic no respondió, abriendo Google Maps...'); window.location.href = googleUrl; }, 1200);
+    return;
+  }catch(e){
+    console.warn('anchor method failed', e);
+  }
+
+  // fallback iframe
+  try{
+    const iframe = document.createElement('iframe');
+    iframe.style.display='none';
+    iframe.src = sygicSchemes[0];
+    document.body.appendChild(iframe);
+    setTimeout(()=>{ try{ document.body.removeChild(iframe);}catch(_){}; window.location.href = googleUrl; }, 1200);
+    return;
+  }catch(e){
+    console.warn('iframe method failed', e);
+  }
+
+  // final fallback
+  window.location.href = googleUrl;
+}
+
+/* wire events */
+btnAnalyze.addEventListener('click', analyzeImage);
+btnNavigate.addEventListener('click', navigatePro);
 </script>
 
 </body>
 </html>
-
